# Lox-Crafting_Interpreters

./: AstPrinter.java  Expr.java  Interpreter.java  Lox.java  Parser.java  README.md  Scanner.java  Stmt.java  TokenType.java  Untitled
clox/: CMakeLists.txt  compile_commands.json
clox/.cache/clangd/index/: chunk.c.9DF836895089F5C9.idx  chunk.h.C9EA380F8C0E23ED.idx  common.h.B6E07B6619003F7C.idx  compiler.c.EA597EE2201F3673.idx  compiler.h.CFEE955DEEED84DD.idx  debug.c.52DC67CFA9734388.idx  debug.h.99244883EC562D23.idx  main.c.0A97A03EEDBFCAAA.idx  memory.c.AF4F5CB8932BA671.idx  memory.h.340FDD81E2AAB141.idx  object.c.688052D6AB296BC2.idx  object.h.F983741A8E2A4E33.idx  scanner.c.40D1019C6B837B3F.idx  scanner.h.53EA18C29A3F82F8.idx  table.c.6CC31B5C501E5C61.idx  table.h.1BB09E5C4EB173B9.idx  value.c.D1F51EADEFA839E5.idx  value.h.5667C0CFF9CF2CF8.idx  vm.c.8D00B5A230489DAE.idx  vm.h.3F008244CC962F85.idx
clox/include/: chunk.h  common.h  compiler.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
clox/src/: chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
jlox/src/com/craftinginterpreters/lox/: Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Scanner.java  Stmt.java  (+1 more)
src/com/craftinginterpreters/lox/: Environment.java  Expr.java  Interpreter.java  Lox.java  LoxFunction.java  Parser.java  Stmt.java  TokenType.java  hello
src/com/craftinginterpreters/scanning/: TokenType.java
src/com/craftinginterpreters/tools/: GenerateAst.java
(+4 files in other folders)
